<?xml version="1.0"?>
<package format="3">
  <name>ic120_description</name>
  <version>1.0.0</version>
  <description>The ic120_description package</description>

  <maintainer email="example@example.com">example</maintainer>
  
  <license>-</license>

  <url type="website"></url>
	<url type="bugtracker"></url>
	<url type="repository"></url>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
