<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ic120_navigation</name>
  <version>0.0.0</version>
  <description>The ic120_unity package</description>
  <maintainer email="ws@todo.todo">ws</maintainer>
  <license>TODO: License declaration</license>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>nav2_container</exec_depend>
  <exec_depend>nav2_map_server</exec_depend>
  <exec_depend>nav2_lifecycle_manager</exec_depend>
  <exec_depend>nav2_controller</exec_depend>
  <exec_depend>nav2_smoother</exec_depend>
  <exec_depend>nav2_planner</exec_depend>
  <exec_depend>nav2_behaviors</exec_depend>
  <exec_depend>nav2_bt_navigator</exec_depend>
  <exec_depend>nav2_waypoint_follower</exec_depend>
  <exec_depend>nav2_velocity_smoother</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>

  <exec_depend>ic120_description</exec_depend>
  <exec_depend>ic120_navigation</exec_depend>
  <exec_depend>gnss_localizer_ros2</exec_depend>  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
